--- a/NGenieBack/appsettings.json
+++ b/NGenieBack/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Issuer": "issuer",
+    "Audient": "client",
+    "Key": "efI6jJo2i8OfTzLaIKe4uazrbqHx8Y5s"
+  }
 }
