--- a/NGenieBack/NGenieBack.csproj
+++ b/NGenieBack/NGenieBack.csproj
@@ -7,8 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="db.sqlite" />
+    <None Remove="db.sqlite-shm" />
+    <None Remove="db.sqlite-wal" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="Client\" />
-    <Folder Include="Primitives\" />
     <Folder Include="Services\" />
   </ItemGroup>
 
@@ -20,6 +25,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
+    <PackageReference Include="OneOf" Version="3.0.223" />
+    <PackageReference Include="OneOf.SourceGenerator" Version="3.0.223" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="ValueOf" Version="2.0.31" />
