--- a/NGenieBack/ng-client/package.json
+++ b/NGenieBack/ng-client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "markdown-it": "^13.0.1",
     "ng-zorro-antd": "^15.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -29,6 +30,7 @@
     "@angular/compiler-cli": "^15.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
+    "@types/markdown-it": "^12.2.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
