--- a/NGenieBack/ng-client/package.json
+++ b/NGenieBack/ng-client/package.json
@@ -18,8 +18,15 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
-    "markdown-it": "^13.0.1",
+    "clipboard": "^2.0.11",
+    "emoji-toolkit": "^7.0.0",
+    "highlight.js": "^11.7.0",
+    "katex": "^0.16.4",
+    "marked": "^4.2.12",
+    "mermaid": "^9.3.0",
     "ng-zorro-antd": "^15.0.3",
+    "ngx-markdown": "^15.1.0",
+    "prismjs": "^1.29.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -31,6 +38,7 @@
     "@tailwindcss/typography": "^0.5.9",
     "@types/jasmine": "~4.3.0",
     "@types/markdown-it": "^12.2.3",
+    "@types/marked": "^4.0.8",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
