--- a/NGenieBack/ng-client/package.json
+++ b/NGenieBack/ng-client/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@auth0/angular-jwt": "^5.1.2",
     "clipboard": "^2.0.11",
     "emoji-toolkit": "^7.0.0",
     "highlight.js": "^11.7.0",
